Fix extra space between plots by making SVG block-level

--- a/inst/htmljs/animint.css
+++ b/inst/htmljs/animint.css
@@ -16,3 +16,6 @@
   transition: opacity 200ms ease-out, transform 200ms ease-out;
   border: 1px solid #eee;
 }
+svg {
+  display: block;
+}
